--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,7 @@
 
 	<build>
 	<finalName>customer-service</finalName>
-		<plugins>
+		<!-- <plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
@@ -78,7 +78,7 @@
                 </execution>
             </executions>
 			</plugin>
-		</plugins>
+		</plugins> -->
 	</build>
 
 </project> 
