--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
 
 	<build>
 	<finalName>customer-service</finalName>
+	<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
 	</build>
 
 </project> 
