--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+		<mainClass>com.chamila.customerservice.CustomerServiceApplication</mainClass>
+	</configuration>
 			</plugin>
 		</plugins>
 	</build>
